# DroneAutoPilot

./: CMakeLists.txt  README.md  build_env.sh  package.xml  setup.cfg  setup.py
config/: drone_params.yaml  mission_params.yaml  navigation_params.yaml  rl_params.yaml
drone_nav_rl_interfaces/action/: ExecuteMission.action
drone_nav_rl_interfaces/msg/: MissionStatus.msg
drone_nav_rl_interfaces/srv/: AbortMission.srv  LoadMission.srv  OptimizePath.srv
launch/: gazebo_sim.launch.py  mission_control.launch.py
meshes/: quadrotor.dae
scripts/: drone_controller_node.py  mission_controller_node.py  path_planner_node.py  train_agent.py  train_rl_agent.py  visualization_node.py
src/skypilot/: __init__.py  drone_controller.py  drone_env.py  mission_controller.py  mission_visualization.py  network_utils.py  path_planner.py  policy_network.py
tests/: pytest.ini  requirements-test.txt  run_integration_tests.py  run_tests.py
tests/fixtures/: test_config.yaml  test_data.py  test_launch.py
tests/integration/: test_full_system.py
tests/unit/: test_drone_controller.py  test_mission_controller.py  test_path_planner.py  test_rl_environment.py
web/backend/: requirements.txt  run_server.sh
web/backend/app/: main.py
web/frontend/: package.json
web/frontend/src/: App.tsx
web/frontend/src/components/: DroneStatus.tsx  Layout.tsx  Map.tsx  MissionControl.tsx  Sidebar.tsx
web/frontend/src/contexts/: MissionContext.tsx  WebSocketContext.tsx
~/ros2_ws/src/drone_nav_rl_interfaces/: CMakeLists.txt  package.xml
~/ros2_ws/src/drone_nav_rl_interfaces/action/: ExecuteMission.action
~/ros2_ws/src/drone_nav_rl_interfaces/msg/: MissionStatus.msg
~/ros2_ws/src/drone_nav_rl_interfaces/srv/: AbortMission.srv  LoadMission.srv  OptimizePath.srv
