<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skypilot</name>
  <version>0.1.0</version>
  <description>Autonomous drone navigation and mission control system</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>
  <depend>python3-gymnasium</depend>
  <depend>python3-torch</depend>
  <depend>python3-fastapi</depend>
  <depend>python3-websockets</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-pytest-cov</test_depend>
  <test_depend>python3-pytest-mock</test_depend>
  <test_depend>python3-pytest-timeout</test_depend>
  <test_depend>python3-pytest-xdist</test_depend>
  <test_depend>python3-coverage</test_depend>
  <test_depend>python3-mock</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 